        Reviewed by Dan Bernstein.

https://bugs.webkit.org/show_bug.cgi?id=26764
        Uncaught NOT_FOUND_ERR: DOMException 8 loading empty text file

        Test: fast/parser/empty-text-resource.html

        * loader/TextDocument.cpp: (WebCore::TextTokenizer::finish): Create document tree if it
        hasn't been created yet.



Canonical link: https://commits.webkit.org/37066@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45385 268f45cc-cd09-0410-ab3c-d52691b4dbfc